maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameters y, i.
  setIndication(17);
               ^